--- a/css/aboutstyles.css
+++ b/css/aboutstyles.css
@@ -14,6 +14,11 @@ body {
     justify-content: space-between;
     align-items: center;
   }
+
+.icon {
+    list-style: none;
+    text-decoration: none;
+}
   
   .nav-collapse ul {
     list-style: none;
